plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.4.18'
}

group 'se.de.hu_berlin.informatik'
version '1.0-SNAPSHOT'
sourceCompatibility = 1.8

//apply from: "$rootDir/gradle/scripts/verifier.gradle"

repositories {
    mavenCentral()
    jcenter()
    maven {
        url "http://titania.fs.uni-saarland.de/nexus/content/groups/public/"
    }
}


dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    implementation fileTree(dir: 'src/main/lib', include: ['*.jar'])
    implementation "de.unisb.cs.st:sequitur:1.0"
    // https://mvnrepository.com/artifact/jfree/jfreechart
    implementation group: 'jfree', name: 'jfreechart', version: '1.0.12'
    //implementation files("${System.getProperty('java.home')}/../lib/tools.jar")
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version '2020.1'
    plugins = ['java', 'coverage', 'junit', 'testng']
}

patchPluginXml {
    changeNotes """
      prototype implementation.<br>
      <em>added a bunch of stuff</em>"""
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}

// Compatibility checks
//runPluginVerifier {
//    pluginFileName = "$rootProject.name-$version"
//    ides = ["IC-2020.1"]
//}
